# jetmoon

./: .gitignore  Makefile  README.md  compile_commands.json  debugConfig  exec.bat  imgui.ini  main.cpp  make.bat  meson.build  meson_options.txt  releaseConfig  runSync.sh  todo.list
data/: .gamecontrollerdb.txt
data/computeShaders/: firstComputeShader.cs
data/shaders/: addTexture.frag  bloom.frag  bloom0.frag  bloom1.frag  cellularNoise.frag  chromaticAberration.frag  colorCorrection.frag  colorGradient.frag  colorMixer.frag  debugLine.fs  debugLine.vs  gammaCorrection.frag  invertColor.frag  lightShader.frag  lightShader.vert  lineShader.gs  lineShader.vs  maskTexture.frag  particleShader.fs  particleShader.gs  particleShader.vs  perlinNoise.frag  renderToTexture.fragmentShader  renderToTexture.vertexShader  renderToWindow.frag  renderToWindow.vert  shadersDefinition.json  splineShader.fs  splineShader.gs  splineShader.vs  spriteShader.fragmentShader  spriteShader.vertexShader  step.frag  test.geom  tilemapShader.frag  tilemapShader.vert  toneMapping.frag  trailShader.fs  trailShader.gs  trailShader.vs  (+1 more)
data/spriteAnimations/: ctl.animationController
game/: InputEnum.hpp  WorldCreator.cpp  WorldCreator.hpp  game.h  meson.build
game/utils/: aimAssist.hpp
jetmoon/: ComponentVariant.hpp  configShaderDSVariant.cpp  configShaderDSVariant.h  jetmoon.h  meson.build
jetmoon/commonStructures/: AnimationDefinition.hpp  Camera.cpp  Camera.hpp  ConfigDS.hpp  EditorConfig.cpp  EditorConfig.hpp  EngineStatistics.hpp  LightningConfig.hpp  Navmesh.cpp  Navmesh.hpp
jetmoon/components/: AudioSource.hpp  CameraComponent.hpp  CollisionSensor.hpp  Hierarchy.hpp  LightSource.hpp  MovementVector.hpp  NameComponent.hpp  NullComponent.hpp  ParticleEmisor.hpp  PostProcessing.hpp  PrefabComponent.hpp  ProceduralTexture.hpp  RigidBody2D.hpp  Sprite.hpp  SpriteAnimation.hpp  TilemapComponent.hpp  Trail.hpp  Transform.cpp  Transform.hpp
jetmoon/core/: ComponentArray.hpp  ComponentManager.hpp  EntityManager.hpp  GameLoop.cpp  GameLoop.hpp  IComponentArray.hpp  ISystem.hpp  Locator.hpp  SceneSerializer.cpp  SceneSerializer.hpp  ServiceContext.cpp  ServiceContext.hpp  SystemManager.hpp  Time.cpp  Time.hpp  World.hpp  WorldContext.hpp  WorldContextOperations.cpp  WorldContextOperations.hpp  WorldManager.cpp  WorldManager.hpp  definitions.cpp  definitions.hpp  interpolation.cpp  interpolation.hpp
jetmoon/gameEngineGUI/: DialogStructEditor.hpp  EditorComponentPanel.cpp  EditorComponentPanel.hpp  EditorFileExplorerPanel.cpp  EditorFileExplorerPanel.hpp  EditorHierarchyPanel.cpp  EditorHierarchyPanel.hpp  EditorSubTopPanel.cpp  EditorSubTopPanel.hpp  EditorTopPanel.cpp  EditorTopPanel.hpp  EditorViewPanel.cpp  EditorViewPanel.hpp  EngineStatisticsImgui.cpp  EngineStatisticsImgui.hpp  FileExplorer.hpp  Gizmos.cpp  Gizmos.hpp  imguiComponents.cpp  imguiComponents.hpp  imguiPayloadDefinition.h
jetmoon/imgui/: imgui.ini  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_widgets.cpp  imstb_textedit.h  main.cpp
jetmoon/lib/: libclingo.so.4  libfuzzylite.so.6.0
jetmoon/opengl/: BatchRenderer.cpp  BatchRenderer.hpp  Framebuffer.cpp  Framebuffer.hpp  GLdefinitions.hpp  PostProcessingHelper.cpp  PostProcessingHelper.hpp  ProceduralTexture.hpp  Shader.cpp  Shader.hpp  ShaderGraphHelper.hpp  Texture.hpp  VAO.hpp
jetmoon/pch/: json.h  precompiled_miniaudio.h
jetmoon/services/: AnimationDefinitionService.hpp  AudioService.hpp  Config.cpp  Config.hpp  EditorDS.hpp  EventService.cpp  EventService.hpp  ImageLoader.hpp  ImguiService.hpp  NuklearService.hpp  RenderContext.cpp  RenderContext.hpp  Renderer2D.cpp  Renderer2D.hpp  ShaderLoader.cpp  ShaderLoader.hpp  SteamService.hpp  WorldManagerDS.hpp  b2WorldService.hpp
jetmoon/steam/: steam_api.h
jetmoon/systems/: AudioSystem.cpp  AudioSystem.hpp  CameraSystem.cpp  CameraSystem.hpp  DebugGUI.cpp  DebugGUI.hpp  DebugPhysics.cpp  DebugPhysics.hpp  Light2DSystem.cpp  Light2DSystem.hpp  NavmeshSystem.cpp  NavmeshSystem.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Physics.cpp  Physics.hpp  PostProcessingSystem.cpp  PostProcessingSystem.hpp  PrefabSystem.cpp  PrefabSystem.hpp  ProceduralTextureSystem.cpp  ProceduralTextureSystem.hpp  RenderAnimation.cpp  RenderAnimation.hpp  RenderClear.cpp  RenderClear.hpp  RenderDisplay.cpp  RenderDisplay.hpp  RenderSprite.cpp  RenderSprite.hpp  SaveEntityMapSystem.cpp  SaveEntityMapSystem.hpp  TilemapSystem.cpp  TilemapSystem.hpp  TrailSystem.cpp  TrailSystem.hpp  VolumetricPostProcessingSystem.cpp  VolumetricPostProcessingSystem.hpp
jetmoon/utils/: AnimatorController.hpp  ComponentInspector.hpp  GLUtils.cpp  GLUtils.hpp  MapJsonLoader.hpp  Shapes.hpp  Spline.hpp  Stopwatch.cpp  Stopwatch.hpp  astar.hpp  json.hpp  jsonFileOperations.hpp  marchingSquares.cpp  marchingSquares.hpp  miniaudio.cpp  miniaudio.h  nuklear.cpp  nuklear.h  nuklearUtils.hpp  nuklear_glfw_gl4.h  stb_image.hpp  tileson.cpp  tileson.hpp  type_name.hpp  variant_by_index.hpp
subprojects/: box2d.wrap  glew.wrap
subprojects/ImGuizmo/: meson.build
subprojects/box2d-2.4.1/: meson.build
subprojects/box2d-2.4.1/include/box2d/: b2_chain_shape.h  b2_dynamic_tree.h  b2_fixture.h
subprojects/box2d-2.4.1/src/collision/: b2_chain_shape.cpp
